--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "this app randomly generates advise",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server"
+    "start": "node server"
   },
   "author": "oladips",
   "license": "ISC",
